Jank-ass fixes to scrollbars

--- a/src/styles/deployable/body.scss
+++ b/src/styles/deployable/body.scss
@@ -2,11 +2,21 @@
 {
     .la-SCROLL_BODY
     {
-        overflow-y: scroll;
-        overflow-x: hidden;
-        scrollbar-width: thin;
-        scrollbar-color: var(--la-scrollbar-primary) transparent;
-        padding-left: 7px;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+
+        >.tab
+        {
+            flex: 1;
+            min-height: 0;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            padding-left: 7px;
+
+            scrollbar-width: thin;
+            scrollbar-color: var(--la-scrollbar-primary) transparent;
+        }
     }
 
     // Make only the damage glow on hovering the button
