--- a/src/styles/mech/body.scss
+++ b/src/styles/mech/body.scss
@@ -2,12 +2,31 @@
 {
     .la-content-body
     {
-        overflow-y: scroll;
-        overflow-x: hidden;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
 
         >.la-tab
         {
+            flex: 1;
+            min-height: 0;
+            overflow-y: scroll;
+            overflow-x: hidden;
             margin-left: 2.25rem;
+
+            // #region Browser
+            scrollbar-width: thin;
+            scrollbar-color: var(--la-scrollbar-primary) transparent;
+            // #endregion
+
+            // #region Electron
+            &::-webkit-scrollbar { width: 2px; }
+            &::-webkit-scrollbar-thumb { background: var(--la-scrollbar-primary); border: 0px; }
+            &::-webkit-scrollbar-track { background: transparent; }
+            &::-moz-scrollbar { width: 2px; }
+            &::-moz-scrollbar-thumb { background: var(--la-scrollbar-primary); border: 0px; }
+            &::-moz-scrollbar-track { background: transparent; }
+            // #endregion
         }
     }
 }
